final submission for review

--- a/nli with attention and MLP.ipynb
+++ b/nli with attention and MLP.ipynb
@@ -1153,7 +1153,10 @@
    "id": "5e698d3a-1297-406c-88ac-9e8603488a6b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import torch\n",
+    "torch.cuda.is_available()"
+   ]
   },
   {
    "cell_type": "code",
